public/styles3.css
@media only screen and (max-width: 600px) {
  body {
    background-image: url(backgroundclouds.jpg);
    height: auto;

    background-position: center;
    background-repeat: no-repeat;
    background-size: auto;
  }
}

@media only screen and (min-width: 600px) {
  body {
    background-image: url(backgroundclouds.jpg);
    height: auto;
    width: auto;

    background-position: center;
    background-repeat: no-repeat;
    background-size: auto;
  }

  .bothside {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }
}

html {
  height: 100%;
  width: auto;
}

h1 {
  padding-top: 150px;
  font-family: "Lemon Tuesday", cursive;
  text-align: center;
  color: azure;
}

.leftside {
  width: 65%;
  height: auto;
  background-color: rgba(70, 151, 221, 0.666);
  margin: 20px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  border-radius: 10px;
}

.rightside {
  width: 55%;
  height: 90%;
  background-color: rgba(70, 151, 221, 0.666);
  margin: 20px;
  padding: 0px;
  display: flex;
  flex-direction: column;
}

hr {
  height: 10px;
  width: 90%;
  color: white;
  margin: 0px;
  padding: 0px;
}

/* fortnite */

.bothside {
  margin-top: 10px;
  padding: 0px;
  height: 82%;
  width: 100%;
  font-size: xx-large;
}

.overview {
  display: flex;
  flex-direction: row;
  height: 40%;
}

.title {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0%;
  width: 60%;
  color: white;
}

.forecast {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  justify-content: center;
  width: 40%;
  color: white;
}

.future {
  /* margin: 20px; */
  height: 100%;
  display: flex;
  justify-content: space-evenly;
  color: white;
  flex-direction: column;
}

.alert {
  background-color: red;
  color: white;
  text-align: center;
  border-radius: 0;
  border: 3px solid gray;
}

.icons {
  display: flex;
  flex-direction: row;
  padding: 20px;
  color: white;
}

#tonight-conditions {
  display: flex;
  flex-direction: row;
  margin-bottom: 10px;
}

#tonight-conditions p {
  font-size: x-large;
  padding: 0px;
  margin: 0px;
}

.small-icon {
  width: 94.5px;
  height: 71px;
}

.tiny-icon {
  width: 47.25px;
  height: 35.5px;
}

.carousel-control-prev{
  margin-left: -80px;
  top: 10px
}

.carousel-control-next{
  margin-right: -80px;
  top: 10px
}

.carousel-indicators{
  top: 145px;
}

.col{
  display: flex;
  justify-content: center;
  margin-bottom: 10px;
}

div.container.text-center {
  margin-top: -10px;
  margin-bottom: -10px;
  height: 290px;
}

.form-check-label {
  width: 150px;
}

div.form-check.form-switch {
  align-content: center;
}

